[gd_scene load_steps=11 format=3 uid="uid://lx38de1n6ab4"]

[ext_resource type="Script" path="res://scripts/zombieland/zombieland.gd" id="1_jmec2"]
[ext_resource type="MeshLibrary" uid="uid://bwsse6nk731go" path="res://scenes/zombieland/zombienews.meshlib" id="2_xvy8i"]
[ext_resource type="PackedScene" uid="uid://jtpxsfhjsdqw" path="res://scenes/zombieland/player.tscn" id="3_otssx"]
[ext_resource type="FontFile" uid="uid://b3p4xyvcs0847" path="res://assets/font/Better VCR 6.1.ttf" id="5_e5v8s"]
[ext_resource type="PackedScene" uid="uid://hwe6yybl1tux" path="res://scenes/zombieland/spawner.tscn" id="5_y3a2u"]

[sub_resource type="Environment" id="Environment_dpg51"]
background_mode = 1
background_color = Color(0.458405, 0.458405, 0.458405, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xepbd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uffdx"]
bg_color = Color(0.834614, 0.834614, 0.834614, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.835294, 0.835294, 0.835294, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ljl40"]
bg_color = Color(0.454902, 0.454902, 0.454902, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.454902, 0.454902, 0.454902, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sgx1i"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="zombieland" type="Node3D"]
script = ExtResource("1_jmec2")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_dpg51")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4, 0)

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("2_xvy8i")
data = {
"cells": PackedInt32Array(-11, 65529, 1, -11, 65530, 1, -12, 65530, 1, -12, 65531, 1, -12, 65532, 1, -12, 65533, 1, -12, 65534, 1, -12, 65535, 1, -12, 0, 1, -12, 1, 1, -12, 2, 1, -13, 2, 1, -13, 3, 1, -13, 4, 1, -13, 5, 1, -12, 5, 1, -11, 6, 1, -10, 6, 1, -9, 6, 1, -8, 6, 1, -8, 7, 1, -7, 7, 1, -6, 7, 1, -5, 7, 1, -4, 7, 1, -3, 7, 1, -2, 7, 1, -1, 7, 1, -65536, 7, 1, -65535, 7, 1, -65534, 7, 1, -65533, 7, 1, -65532, 7, 1, -65531, 7, 1, -65530, 7, 1, -65530, 6, 1, -65529, 6, 1, -65529, 5, 1, -65528, 5, 1, -65528, 4, 1, -65528, 3, 1, -65528, 2, 1, -65528, 1, 1, -65529, 1, 1, -65529, 0, 1, -65529, 65535, 1, -65529, 65534, 1, -65529, 65533, 1, -65529, 65532, 1, -65529, 65531, 1, -65529, 65530, 1, -65528, 65529, 1, -65529, 65529, 1, -65530, 65529, 1, -65531, 65529, 1, -65532, 65529, 1, -65533, 65529, 1, -65534, 65529, 1, -65535, 65529, 1, -65536, 65529, 1, -1, 65529, 1, -2, 65529, 1, -2, 65528, 1, -3, 65528, 1, -4, 65528, 1, -5, 65528, 1, -6, 65528, 1, -7, 65528, 1, -8, 65528, 1, -9, 65528, 1, -10, 65528, 1, -11, 65528, 1, -12, 65528, 1, -12, 65529, 1, -13, 1, 1, -13, 0, 1, -13, 65535, 1, -13, 65534, 1, -13, 65533, 1, -13, 65532, 1, -13, 65531, 1, -13, 65528, 1, -13, 65527, 1, -13, 65529, 1, -13, 65530, 1, -13, 6, 1, -13, 7, 1, -12, 7, 1, -11, 7, 1, -10, 7, 1, -9, 7, 1, -65529, 7, 1, -65528, 7, 1, -65527, 7, 1, -65527, 6, 1, -65527, 5, 1, -65527, 4, 1, -65527, 3, 1, -65527, 2, 1, -65527, 1, 1, -65527, 0, 1, -65527, 65535, 1, -65527, 65534, 1, -65527, 65533, 1, -65527, 65532, 1, -65528, 65532, 1, -65528, 65531, 1, -65528, 65530, 1, -65528, 65528, 1, -65527, 65528, 1, -65527, 65529, 1, -65527, 65530, 1, -65527, 65531, 1, -65528, 65534, 1, -65528, 65533, 1, -65528, 65535, 1, -65528, 0, 1, -65528, 6, 1, -65530, 5, 1, -65530, 4, 1, -65529, 4, 1, -65529, 3, 1, -65529, 2, 1, -65530, 3, 1, -65530, 2, 1, -65531, 4, 1, -65531, 5, 1, -65532, 5, 1, -65532, 6, 1, -65531, 6, 1, -65533, 6, 1, -65534, 6, 1, -3, 6, 1, -4, 6, 1, -5, 6, 1, -6, 6, 1, -7, 6, 1, -2, 6, 1, -1, 6, 1, -65536, 6, 1, -65535, 6, 1, -12, 6, 1, -12, 4, 1, -11, 4, 1, -11, 3, 1, -12, 3, 1, -11, 5, 1, -10, 5, 1, -10, 4, 1, -9, 4, 1, -9, 5, 1, -8, 5, 1, -7, 5, 1, -6, 5, 1, -5, 5, 1, -4, 5, 1, -3, 5, 1, -2, 5, 1, -1, 5, 1, -65536, 5, 1, -65535, 5, 1, -65534, 5, 1, -65533, 5, 1, -65532, 4, 1, -65533, 4, 1, -65534, 4, 1, -65535, 4, 1, -65536, 4, 1, -1, 4, 1, -1, 3, 1, -65536, 3, 1, -65535, 3, 1, -65534, 3, 1, -65533, 2, 1, -65532, 2, 1, -65531, 2, 1, -65534, 2, 1, -65535, 2, 1, -65536, 2, 1, -1, 2, 1, -65532, 3, 1, -65533, 3, 1, -65531, 3, 1, -2, 4, 1, -3, 4, 1, -4, 4, 1, -5, 4, 1, -6, 4, 1, -7, 4, 1, -7, 3, 1, -6, 3, 1, -5, 3, 1, -4, 3, 1, -3, 3, 1, -2, 3, 1, -8, 4, 1, -8, 3, 1, -9, 3, 1, -10, 3, 1, -10, 2, 1, -9, 2, 1, -8, 2, 1, -7, 2, 1, -6, 2, 1, -5, 2, 1, -4, 2, 1, -3, 2, 1, -2, 2, 1, -10, 1, 1, -9, 1, 1, -8, 1, 1, -7, 1, 1, -5, 1, 1, -4, 1, 1, -3, 1, 1, -1, 1, 1, -65536, 1, 1, -65535, 1, 1, -65534, 1, 1, -65533, 1, 1, -65532, 1, 1, -9, 0, 1, -8, 0, 1, -7, 0, 1, -6, 0, 1, -5, 0, 1, -4, 0, 1, -3, 0, 1, -2, 0, 1, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 0, 1, -2, 1, 1, -6, 1, 1, -1, 0, 1, -1, 65535, 1, -65536, 65535, 1, -65535, 65535, 1, -11, 1, 1, -11, 0, 1, -11, 65535, 1, -11, 2, 1, -11, 65534, 1, -11, 65533, 1, -11, 65531, 1, -10, 65531, 1, -9, 65531, 1, -10, 65530, 1, -10, 65529, 1, -9, 65529, 1, -8, 65529, 1, -1, 65528, 1, -3, 65529, 1, -65536, 65528, 1, -65535, 65528, 1, -65534, 65528, 1, -65533, 65528, 1, -65532, 65528, 1, -65531, 65528, 1, -65530, 65528, 1, -65529, 65528, 1, -12, 65527, 1, -11, 65527, 1, -10, 65527, 1, -9, 65527, 1, -8, 65527, 1, -7, 65527, 1, -6, 65527, 1, -5, 65527, 1, -4, 65527, 1, -3, 65527, 1, -2, 65527, 1, -1, 65527, 1, -65536, 65527, 1, -65535, 65527, 1, -65534, 65527, 1, -65533, 65527, 1, -65532, 65527, 1, -65531, 65527, 1, -65530, 65527, 1, -65529, 65527, 1, -65528, 65527, 1, -65527, 65527, 1, -65530, 65534, 1, -65530, 65533, 1, -65530, 65532, 1, -65530, 65531, 1, -65530, 65530, 1, -65530, 65535, 1, -65530, 0, 1, -65530, 1, 1, -65531, 1, 1, -65531, 0, 1, -65531, 65535, 1, -65531, 65534, 1, -65531, 65533, 1, -65531, 65532, 1, -65531, 65531, 1, -65531, 65530, 1, -65532, 65535, 1, -65532, 65534, 1, -65532, 65533, 1, -65532, 65532, 1, -65532, 65531, 1, -65532, 65530, 1, -65533, 65531, 1, -65533, 65532, 1, -65533, 65533, 1, -65533, 65534, 1, -65533, 65535, 1, -65534, 65535, 1, -65534, 65534, 1, -65534, 65533, 1, -65534, 65532, 1, -65534, 65531, 1, -65534, 65530, 1, -65535, 65534, 1, -65535, 65533, 1, -65535, 65532, 1, -65535, 65531, 1, -65535, 65530, 1, -65536, 65531, 1, -65536, 65532, 1, -65536, 65533, 1, -1, 65534, 1, -65536, 65534, 1, -65533, 65530, 1, -2, 65535, 1, -3, 65535, 1, -3, 65534, 1, -3, 65533, 1, -3, 65532, 1, -2, 65532, 1, -2, 65531, 1, -1, 65531, 1, -1, 65533, 1, -2, 65533, 1, -2, 65534, 1, -4, 65534, 1, -5, 65534, 1, -5, 65533, 1, -4, 65532, 1, -3, 65531, 1, -1, 65532, 1, -4, 65535, 1, -5, 65535, 1, -6, 65535, 1, -7, 65535, 1, -8, 65535, 1, -9, 65535, 1, -9, 65534, 1, -8, 65534, 1, -8, 65533, 1, -7, 65533, 1, -6, 65533, 1, -6, 65532, 1, -5, 65532, 1, -9, 65533, 1, -9, 65532, 1, -8, 65532, 1, -8, 65531, 1, -7, 65531, 1, -6, 65531, 1, -5, 65531, 1, -4, 65531, 1, -7, 65534, 1, -4, 65533, 1, -6, 65534, 1, -10, 65533, 1, -10, 65532, 1, -11, 65532, 1, -10, 65535, 1, -10, 0, 1, -10, 65534, 1, -7, 65532, 1, -8, 65530, 1, -7, 65530, 1, -6, 65530, 1, -5, 65530, 1, -9, 65530, 1, -7, 65529, 1, -6, 65529, 1, -5, 65529, 1, -4, 65529, 1, -2, 65530, 1, -1, 65530, 1, -4, 65530, 1, -3, 65530, 1, -65536, 65530, 1, 2, 65535, 2, 5, 65532, 2, 1, 65529, 0, 65529, 65529, 0, 65526, 65534, 0, 65531, 1, 0, 6, 1, 0, 8, 65534, 0, 65531, 65534, 0, 65533, 4, 0, 8, 4, 0, -19, 65522, 1, -19, 65523, 1, -19, 65524, 1, -19, 65525, 1, -20, 65525, 1, -20, 65526, 1, -20, 65527, 1, -20, 65528, 1, -21, 65528, 1, -21, 65529, 1, -21, 65530, 1, -21, 65531, 1, -21, 65532, 1, -21, 65533, 1, -21, 65534, 1, -21, 65535, 1, -21, 0, 1, -21, 1, 1, -21, 2, 1, -21, 3, 1, -22, 4, 1, -22, 5, 1, -22, 6, 1, -22, 7, 1, -22, 8, 1, -22, 9, 1, -22, 10, 1, -22, 11, 1, -21, 11, 1, -21, 12, 1, -20, 12, 1, -20, 13, 1, -19, 13, 1, -18, 13, 1, -17, 14, 1, -16, 14, 1, -15, 14, 1, -14, 14, 1, -13, 14, 1, -12, 14, 1, -11, 14, 1, -10, 14, 1, -9, 14, 1, -8, 14, 1, -7, 14, 1, -6, 14, 1, -5, 14, 1, -4, 14, 1, -3, 14, 1, -2, 14, 1, -1, 14, 1, -65536, 14, 1, -65535, 14, 1, -65534, 14, 1, -65533, 14, 1, -65532, 14, 1, -65531, 14, 1, -65530, 14, 1, -65529, 14, 1, -65528, 14, 1, -65527, 14, 1, -65526, 14, 1, -65525, 14, 1, -65524, 14, 1, -65523, 14, 1, -65522, 14, 1, -65521, 14, 1, -65520, 14, 1, -65519, 14, 1, -65518, 14, 1, -65518, 13, 1, -65518, 12, 1, -65518, 11, 1, -65518, 10, 1, -65518, 9, 1, -65518, 8, 1, -65518, 7, 1, -65518, 6, 1, -65518, 5, 1, -65518, 4, 1, -65518, 3, 1, -65518, 2, 1, -65518, 1, 1, -65518, 0, 1, -65518, 65535, 1, -65518, 65534, 1, -65518, 65533, 1, -65518, 65532, 1, -65518, 65531, 1, -65518, 65530, 1, -65518, 65529, 1, -65518, 65528, 1, -65518, 65527, 1, -65518, 65526, 1, -65518, 65521, 1, -65518, 65520, 1, -65519, 65520, 1, -65520, 65520, 1, -65521, 65520, 1, -65522, 65520, 1, -65523, 65520, 1, -65524, 65520, 1, -65525, 65520, 1, -65526, 65520, 1, -65527, 65520, 1, -65528, 65520, 1, -65529, 65520, 1, -65530, 65520, 1, -65531, 65520, 1, -65532, 65520, 1, -65533, 65520, 1, -65534, 65520, 1, -65535, 65520, 1, -65536, 65520, 1, -1, 65520, 1, -2, 65520, 1, -3, 65520, 1, -4, 65520, 1, -5, 65520, 1, -6, 65520, 1, -7, 65520, 1, -8, 65520, 1, -9, 65520, 1, -10, 65520, 1, -11, 65520, 1, -12, 65520, 1, -13, 65520, 1, -14, 65520, 1, -15, 65520, 1, -16, 65520, 1, -17, 65520, 1, -18, 65520, 1, -19, 65520, 1, -20, 65520, 1, -21, 65520, 1, -22, 65520, 1, -22, 65521, 1, -22, 65522, 1, -22, 65523, 1, -22, 65524, 1, -22, 65525, 1, -22, 65526, 1, -22, 65527, 1, -22, 65528, 1, -22, 65529, 1, -22, 65530, 1, -22, 65531, 1, -22, 65532, 1, -22, 65533, 1, -22, 65534, 1, -22, 65535, 1, -22, 0, 1, -22, 1, 1, -22, 2, 1, -22, 3, 1, -22, 12, 1, -22, 13, 1, -22, 14, 1, -21, 14, 1, -20, 14, 1, -19, 14, 1, -18, 14, 1, -21, 13, 1, -17, 13, 1, -16, 13, 1, -15, 13, 1, -14, 13, 1, -13, 13, 1, -12, 13, 1, -11, 13, 1, -10, 13, 1, -9, 13, 1, -8, 13, 1, -7, 13, 1, -6, 13, 1, -5, 13, 1, -4, 13, 1, -3, 13, 1, -2, 13, 1, -1, 13, 1, -65536, 13, 1, -65535, 13, 1, -65534, 13, 1, -65533, 13, 1, -65532, 13, 1, -65531, 13, 1, -65530, 13, 1, -65529, 13, 1, -65528, 13, 1, -65527, 13, 1, -65526, 13, 1, -65525, 13, 1, -65524, 13, 1, -65523, 13, 1, -65522, 13, 1, -65521, 13, 1, -65520, 13, 1, -65519, 13, 1, -65519, 12, 1, -65519, 11, 1, -65519, 10, 1, -65519, 9, 1, -65519, 8, 1, -65519, 7, 1, -65519, 6, 1, -65519, 5, 1, -65519, 4, 1, -65519, 3, 1, -65519, 2, 1, -65519, 1, 1, -65519, 0, 1, -65519, 65535, 1, -65519, 65534, 1, -65519, 65533, 1, -65519, 65532, 1, -65519, 65531, 1, -65519, 65530, 1, -65519, 65529, 1, -65519, 65528, 1, -65519, 65527, 1, -65519, 65526, 1, -65519, 65525, 1, -65519, 65524, 1, -65518, 65524, 1, -65518, 65525, 1, -65518, 65523, 1, -65518, 65522, 1, -65519, 65522, 1, -65519, 65521, 1, -65520, 65521, 1, -65520, 65522, 1, -65520, 65523, 1, -65519, 65523, 1, -21, 65521, 1, -21, 65522, 1, -20, 65522, 1, -20, 65523, 1, -20, 65524, 1, -19, 65528, 1, -19, 65527, 1, -18, 65527, 1, -17, 65527, 1, -17, 65526, 1, -16, 65526, 1, -21, 65526, 1, -21, 65527, 1, -21, 65525, 1, -21, 65524, 1, -21, 65523, 1, -18, 65522, 1, -17, 65522, 1, -19, 65521, 1, -20, 65521, 1, -18, 65521, 1, -17, 65521, 1, -16, 65521, 1, -15, 65521, 1, -14, 65521, 1, -13, 65521, 1, -12, 65521, 1, -11, 65521, 1, -10, 65521, 1, -9, 65521, 1, -8, 65521, 1, -7, 65521, 1, -6, 65521, 1, -5, 65521, 1, -4, 65521, 1, -3, 65521, 1, -2, 65521, 1, -1, 65521, 1, -65536, 65521, 1, -65535, 65521, 1, -65534, 65521, 1, -65533, 65521, 1, -65532, 65521, 1, -65531, 65521, 1, -65530, 65521, 1, -65529, 65521, 1, -65528, 65521, 1, -65527, 65521, 1, -65526, 65521, 1, -65525, 65521, 1, -65524, 65521, 1, -65523, 65521, 1, -65522, 65521, 1, -65521, 65522, 1, -65521, 65521, 1, -65521, 65523, 1, -65520, 65524, 1, -65520, 65525, 1, -65520, 65526, 1, -65520, 65527, 1, -65520, 65528, 1, -65520, 65529, 1, -65520, 65530, 1, -65520, 65531, 1, -65520, 65532, 1, -65520, 65533, 1, -65520, 65534, 1, -65520, 65535, 1, -65520, 0, 1, -65520, 1, 1, -65520, 2, 1, -65520, 3, 1, -65521, 3, 1, -65521, 2, 1, -65521, 1, 1, -65521, 0, 1, -65521, 65535, 1, -65522, 65534, 1, -65522, 65533, 1, -65522, 65532, 1, -65522, 65531, 1, -65522, 65530, 1, -65523, 65530, 1, -65523, 65529, 1, -65523, 65531, 1, -65523, 65532, 1, -65523, 65533, 1, -65523, 65534, 1, -65523, 65535, 1, -65523, 0, 1, -65523, 1, 1, -65523, 2, 1, -65524, 65533, 1, -65524, 65532, 1, -65524, 65531, 1, -65524, 65530, 1, -65524, 65529, 1, -65524, 65528, 1, -65524, 65527, 1, -65525, 65529, 1, -65525, 65530, 1, -65525, 65531, 1, -65525, 65532, 1, -65525, 65533, 1, -65525, 65534, 1, -65526, 65534, 1, -65526, 65535, 1, -65526, 0, 1, -65526, 1, 1, -65526, 65533, 1, -65526, 65532, 1, -65526, 65531, 1, -65526, 65530, 1, -65526, 65529, 1, -65526, 65528, 1, -65526, 65527, 1, -65526, 65526, 1, -65525, 0, 1, -65524, 0, 1, -65524, 65535, 1, -65522, 65529, 1, -65523, 3, 1, -65523, 4, 1, -65524, 1, 1, -65524, 2, 1, -65524, 3, 1, -65524, 65534, 1, -65525, 65535, 1, -65525, 1, 1, -65525, 2, 1, -65525, 3, 1, -65526, 4, 1, -65525, 4, 1, -65526, 3, 1, -65526, 5, 1, -65526, 6, 1, -65526, 7, 1, -65526, 2, 1, -65525, 5, 1, -65523, 5, 1, -65523, 6, 1, -65523, 7, 1, -65523, 8, 1, -65524, 8, 1, -65524, 9, 1, -65524, 7, 1, -65522, 6, 1, -65522, 5, 1, -65525, 8, 1, -65526, 8, 1, -65527, 8, 1, -65528, 8, 1, -65529, 8, 1, -65530, 8, 1, -65525, 7, 1, -65526, 9, 1, -65527, 9, 1, -65528, 9, 1, -65529, 9, 1, -65530, 9, 1, -65531, 9, 1, -65532, 9, 1, -65523, 9, 1, -65525, 9, 1, -65526, 10, 1, -65527, 10, 1, -65528, 10, 1, -65529, 10, 1, -65530, 10, 1, -65531, 10, 1, -65532, 10, 1, -65533, 10, 1, -65534, 10, 1, -65533, 9, 1, -65531, 8, 1, -65532, 8, 1, -65534, 9, 1, -65534, 8, 1, -65533, 8, 1, -65535, 9, 1, -65536, 9, 1, -1, 10, 1, -2, 10, 1, -3, 10, 1, -4, 10, 1, -65536, 10, 1, -65535, 10, 1, -65530, 11, 1, -65531, 11, 1, -65532, 11, 1, -65533, 11, 1, -65534, 11, 1, -65535, 11, 1, -65536, 11, 1, -1, 11, 1, -2, 11, 1, -65534, 12, 1, -65535, 12, 1, -65536, 12, 1, -1, 12, 1, -65533, 12, 1, -65532, 12, 1, -2, 12, 1, -3, 12, 1, -4, 12, 1, -5, 12, 1, -6, 12, 1, -7, 12, 1, -7, 11, 1, -8, 11, 1, -6, 11, 1, -5, 11, 1, -4, 11, 1, -9, 12, 1, -10, 12, 1, -11, 12, 1, -12, 12, 1, -12, 11, 1, -13, 11, 1, -13, 10, 1, -12, 10, 1, -11, 10, 1, -10, 10, 1, -9, 10, 1, -13, 12, 1, -14, 12, 1, -14, 11, 1, -15, 11, 1, -14, 10, 1, -9, 11, 1, -15, 12, 1, -10, 11, 1, -8, 12, 1, -11, 11, 1, -16, 12, 1, -17, 12, 1, -18, 12, 1, -19, 12, 1, -20, 11, 1, -19, 11, 1, -18, 11, 1, -17, 11, 1, -16, 11, 1, -18, 10, 1, -19, 10, 1, -19, 9, 1, -19, 8, 1, -18, 7, 1, -17, 7, 1, -17, 6, 1, -16, 6, 1, -15, 6, 1, -14, 6, 1, -14, 7, 1, -14, 8, 1, -14, 9, 1, -15, 10, 1, -20, 9, 1, -21, 8, 1, -21, 7, 1, -21, 6, 1, -20, 6, 1, -19, 6, 1, -18, 6, 1, -12, 8, 1, -12, 9, 1, -13, 9, 1, -17, 10, 1, -18, 9, 1, -18, 8, 1, -16, 5, 1, -17, 8, 1, -20, 10, 1, -19, 7, 1, -20, 8, 1, -21, 9, 1, -21, 10, 1, -21, 4, 1, -20, 4, 1, -20, 5, 1, -20, 7, 1, -21, 5, 1, -20, 3, 1, -19, 3, 1, -19, 2, 1, -19, 1, 1, -18, 1, 1, -18, 0, 1, -17, 0, 1, -17, 65535, 1, -17, 65534, 1, -17, 65533, 1, -17, 65532, 1, -17, 65531, 1, -17, 65530, 1, -17, 65529, 1, -17, 65528, 1, -16, 65527, 1, -15, 65528, 1, -15, 65529, 1, -15, 65530, 1, -15, 65531, 1, -16, 65531, 1, -18, 65531, 1, -18, 65530, 1, -18, 65529, 1, -18, 65528, 1, -15, 65526, 1, -14, 65526, 1, -14, 65527, 1, -15, 65527, 1, -16, 65529, 1, -16, 65530, 1, -18, 65532, 1, -19, 65531, 1, -19, 65530, 1, -19, 65529, 1, -20, 65529, 1, -20, 65530, 1, -20, 65531, 1, -20, 65532, 1, -20, 65533, 1, -20, 65534, 1, -20, 65535, 1, -20, 0, 1, -20, 1, 1, -20, 2, 1, -19, 5, 1, -19, 4, 1, -18, 2, 1, -18, 65535, 1, -18, 65534, 1, -18, 65533, 1, -19, 65535, 1, -19, 0, 1, -19, 65534, 1, -19, 65533, 1, -19, 65532, 1, -17, 65525, 1, -16, 65525, 1, -16, 65524, 1, -15, 65524, 1, -15, 65523, 1, -14, 65523, 1, -13, 65523, 1, -13, 65524, 1, -12, 65524, 1, -12, 65525, 1, -13, 65525, 1, -14, 65525, 1, -15, 65525, 1, -18, 65525, 1, -18, 65524, 1, -17, 65524, 1, -16, 65523, 1, -19, 65526, 1, -17, 65523, 1, -12, 65523, 1, -13, 65526, 1, -14, 65524, 1, -18, 65526, 1, -18, 65523, 1, -11, 65523, 1, -10, 65523, 1, -9, 65523, 1, -9, 65524, 1, -10, 65524, 1, -10, 65525, 1, -11, 65525, 1, -11, 65524, 1, -16, 65522, 1, -15, 65522, 1, -8, 65523, 1, -7, 65523, 1, -6, 65523, 1, -5, 65523, 1, -8, 65522, 1, -9, 65522, 1, -10, 65522, 1, -11, 65522, 1, -12, 65522, 1, -13, 65522, 1, -14, 65522, 1, -7, 65522, 1, -6, 65522, 1, -5, 65522, 1, -4, 65522, 1, -3, 65522, 1, -3, 65523, 1, -4, 65523, 1, -2, 65522, 1, -1, 65522, 1, -65536, 65522, 1, -65535, 65522, 1, -65534, 65522, 1, -65533, 65522, 1, -65532, 65522, 1, -65531, 65522, 1, -65531, 65523, 1, -65530, 65523, 1, -65532, 65523, 1, -65533, 65523, 1, -65534, 65523, 1, -65529, 65523, 1, -65528, 65523, 1, -65527, 65523, 1, -65526, 65523, 1, -65525, 65523, 1, -65530, 65522, 1, -65529, 65522, 1, -65528, 65522, 1, -65527, 65522, 1, -65526, 65522, 1, -65525, 65522, 1, -65524, 65522, 1, -65523, 65522, 1, -65522, 65522, 1, -65522, 65523, 1, -65521, 65524, 1, -65521, 65525, 1, -65522, 65525, 1, -65522, 65526, 1, -65522, 65527, 1, -65522, 65528, 1, -65521, 65528, 1, -65521, 65527, 1, -65521, 65526, 1, -65522, 65535, 1, -65522, 0, 1, -65521, 65534, 1, -65521, 65533, 1, -65521, 65532, 1, -65521, 65531, 1, -65521, 65530, 1, -65521, 65529, 1, -65522, 1, 1, -65522, 2, 1, -65522, 3, 1, -65522, 4, 1, -65521, 6, 1, -65521, 5, 1, -65524, 4, 1, -65524, 5, 1, -65524, 6, 1, -65525, 6, 1, -65521, 7, 1, -65521, 8, 1, -65522, 8, 1, -65522, 7, 1, -65521, 4, 1, -65520, 5, 1, -65520, 4, 1, -65520, 6, 1, -65520, 7, 1, -65520, 8, 1, -65521, 9, 1, -65521, 10, 1, -65520, 11, 1, -65520, 10, 1, -65520, 9, 1, -65520, 12, 1, -65521, 12, 1, -65521, 11, 1, -65522, 12, 1, -65523, 12, 1, -65523, 11, 1, -65524, 11, 1, -65524, 10, 1, -65522, 9, 1, -65522, 10, 1, -65522, 11, 1, -65524, 12, 1, -65523, 10, 1, -65525, 12, 1, -65526, 12, 1, -65526, 11, 1, -65525, 10, 1, -65527, 12, 1, -65527, 11, 1, -65525, 11, 1, -65528, 12, 1, -65529, 12, 1, -65530, 12, 1, -65531, 12, 1, -65529, 11, 1, -65528, 11, 1, -3, 11, 1, -2, 9, 1, -1, 9, 1, -1, 8, 1, -65536, 8, 1, -65535, 8, 1, -4, 9, 1, -5, 9, 1, -4, 8, 1, -3, 8, 1, -2, 8, 1, -3, 9, 1, -5, 10, 1, -8, 10, 1, -8, 9, 1, -7, 9, 1, -7, 8, 1, -6, 8, 1, -5, 8, 1, -9, 9, 1, -6, 9, 1, -6, 10, 1, -7, 10, 1, -10, 9, 1, -11, 9, 1, -11, 8, 1, -13, 8, 1, -10, 8, 1, -8, 8, 1, -9, 8, 1, -15, 9, 1, -15, 8, 1, -16, 8, 1, -16, 7, 1, -15, 7, 1, -16, 10, 1, -16, 9, 1, -17, 9, 1, -18, 5, 1, -18, 4, 1, -18, 3, 1, -17, 3, 1, -16, 2, 1, -15, 2, 1, -14, 2, 1, -14, 4, 1, -14, 5, 1, -17, 4, 1, -16, 3, 1, -15, 3, 1, -14, 3, 1, -15, 5, 1, -15, 4, 1, -16, 4, 1, -17, 5, 1, -15, 1, 1, -17, 2, 1, -16, 1, 1, -16, 0, 1, -15, 0, 1, -15, 65535, 1, -14, 65535, 1, -14, 0, 1, -14, 1, 1, -17, 1, 1, -16, 65535, 1, -14, 65534, 1, -16, 65533, 1, -15, 65532, 1, -14, 65532, 1, -16, 65534, 1, -15, 65533, 1, -14, 65533, 1, -15, 65534, 1, -16, 65532, 1, -14, 65531, 1, -14, 65530, 1, -14, 65529, 1, -14, 65528, 1, -16, 65528, 1, -5, 65526, 1, -6, 65526, 1, -7, 65526, 1, -7, 65525, 1, -6, 65525, 1, -5, 65525, 1, -4, 65525, 1, -3, 65525, 1, -4, 65526, 1, -8, 65526, 1, -9, 65526, 1, -10, 65526, 1, -11, 65526, 1, -12, 65526, 1, -9, 65525, 1, -8, 65525, 1, -7, 65524, 1, -6, 65524, 1, -5, 65524, 1, -4, 65524, 1, -3, 65524, 1, -2, 65524, 1, -8, 65524, 1, -1, 65524, 1, -65536, 65524, 1, -65535, 65524, 1, -65534, 65524, 1, -65536, 65525, 1, -1, 65525, 1, -2, 65526, 1, -3, 65526, 1, -65535, 65525, 1, -65534, 65525, 1, -65533, 65525, 1, -65532, 65525, 1, -65534, 65526, 1, -65535, 65526, 1, -65536, 65526, 1, -1, 65526, 1, -2, 65523, 1, -1, 65523, 1, -65536, 65523, 1, -2, 65525, 1, -65533, 65524, 1, -65532, 65524, 1, -65531, 65524, 1, -65530, 65524, 1, -65535, 65523, 1, -65531, 65525, 1, -65530, 65525, 1, -65529, 65525, 1, -65530, 65526, 1, -65531, 65526, 1, -65532, 65526, 1, -65528, 65525, 1, -65527, 65525, 1, -65526, 65525, 1, -65525, 65525, 1, -65525, 65526, 1, -65529, 65524, 1, -65528, 65524, 1, -65529, 65526, 1, -65533, 65526, 1, -65527, 65524, 1, -65528, 65526, 1, -65526, 65524, 1, -65525, 65524, 1, -65524, 65524, 1, -65524, 65525, 1, -65524, 65526, 1, -65525, 65527, 1, -65523, 65525, 1, -65523, 65527, 1, -65527, 65526, 1, -65525, 65528, 1, -65523, 65528, 1, -65523, 65526, 1, -65523, 65524, 1, -65523, 65523, 1, -65522, 65524, 1, -65524, 65523, 1, 18, 14, 4, 17, 14, 4, 16, 14, 4, 15, 14, 4, 14, 14, 4, 13, 14, 4, 12, 14, 4, 11, 14, 4, 10, 14, 4, 9, 14, 4, 8, 14, 4, 7, 14, 4, 6, 14, 4, 5, 14, 4, 4, 14, 4, 3, 14, 4, 2, 14, 4, 1, 14, 4, 0, 14, 4, 65535, 14, 4, 65534, 14, 4, 65533, 14, 4, 65532, 14, 4, 65531, 14, 4, 65530, 14, 4, 65529, 14, 4, 65528, 14, 4, 65527, 14, 4, 65526, 14, 4, 65525, 14, 4, 65524, 14, 4, 65523, 14, 4, 65522, 14, 4, 65521, 14, 4, 65520, 14, 4, 65519, 14, 4, 65518, 14, 4, 65517, 14, 4, 65516, 14, 4, 65515, 14, 4, 65514, 14, 4, 65514, 13, 4, 65514, 12, 4, 65514, 11, 4, 65514, 65520, 4, 65514, 65521, 4, 65514, 65522, 4, 65514, 65523, 4, 65514, 65524, 4, 65514, 65525, 4, 65514, 65526, 4, 65514, 65527, 4, 65514, 65528, 4, 65514, 65529, 4, 65514, 65530, 4, 65514, 65531, 4, 65514, 65532, 4, 65514, 65533, 4, 65514, 65534, 4, 65514, 65535, 4, 65514, 0, 4, 65514, 1, 4, 65514, 2, 4, 65514, 3, 4, 65514, 4, 4, 65514, 5, 4, 65514, 6, 4, 65514, 7, 4, 65514, 8, 4, 65514, 9, 4, 65514, 10, 4, 65515, 65520, 4, 65516, 65520, 4, 65517, 65520, 4, 65518, 65520, 4, 65519, 65520, 4, 65520, 65520, 4, 65523, 65520, 4, 65521, 65520, 4, 65522, 65520, 4, 65524, 65520, 4, 65525, 65520, 4, 65526, 65520, 4, 65527, 65520, 4, 65528, 65520, 4, 65529, 65520, 4, 65530, 65520, 4, 65531, 65520, 4, 65532, 65520, 4, 65533, 65520, 4, 65534, 65520, 4, 65535, 65520, 4, 0, 65520, 4, 1, 65520, 4, 2, 65520, 4, 3, 65520, 4, 4, 65520, 4, 5, 65520, 4, 6, 65520, 4, 7, 65520, 4, 8, 65520, 4, 9, 65520, 4, 10, 65520, 4, 11, 65520, 4, 12, 65520, 4, 13, 65520, 4, 14, 65520, 4, 15, 65520, 4, 16, 65520, 4, 17, 65520, 4, 18, 65520, 4, 18, 65521, 4, 18, 65522, 4, 18, 65523, 4, 18, 65524, 4, 18, 65525, 4, 18, 65526, 4, 18, 65527, 4, 18, 65528, 4, 18, 65529, 4, 18, 65530, 4, 18, 65531, 4, 18, 65532, 4, 18, 65533, 4, 18, 65534, 4, 18, 65535, 4, 18, 0, 4, 18, 1, 4, 18, 2, 4, 18, 3, 4, 18, 4, 4, 18, 5, 4, 18, 6, 4, 18, 7, 4, 18, 8, 4, 18, 9, 4, 18, 10, 4, 18, 11, 4, 18, 12, 4, 18, 13, 4, 4, 3, 5, 1, 6, 5, 65529, 7, 5, 65528, 65533, 0, 7, 65528, 5, 7, 9, 5, 65523, 65527, 5, 65521, 5, 5, 65525, 6, 5, 65525, 7, 5, 65531, 11, 5, 5, 11, 5, 3, 65524, 5, 65530, 65524, 5, 65521, 65530, 0, 65519, 65532, 0, 65519, 65533, 0, 65517, 3, 0, 65522, 1, 0, 65523, 65534, 0, 65527, 4, 0, 65527, 8, 0, 65525, 5, 0, 65525, 8, 0, 65521, 4, 0, 65521, 6, 0, 65523, 65528, 0, 65523, 65526, 0, 65530, 65523, 0, 65530, 65525, 0, 1, 7, 0, 1, 5, 0, 5, 12, 0, 5, 10, 0, 7, 10, 0, 7, 8, 0, 4, 2, 0, 4, 4, 0, 65533, 65528, 2, 65533, 65527, 2, 65533, 65526, 2, 65533, 65525, 2, 65526, 65535, 3, 65523, 65535, 3, 65522, 0, 3, 6, 2, 3, 8, 5, 3, 8, 65535, 3, 65521, 12, 2, 65521, 11, 2, 14, 13, 2, 14, 12, 2, 13, 65521, 2, 13, 65522, 2, 10, 65521, 2, 10, 65522, 2, 10, 65523, 2, 1, 65528, 3, 65531, 0, 5, 65531, 65535, 5, 3, 65523, 0, 7, 65527, 0, 65529, 8, 0, 65531, 12, 0, 65528, 65532, 5, 65529, 65528, 5, 65519, 65534, 3, 65519, 65531, 3, 65517, 4, 3, 65517, 5, 3, 65517, 7, 3, 65517, 6, 3, 65517, 8, 0)
}
metadata/_editor_floor_ = Vector3(0, -1, 0)

[node name="player" parent="." instance=ExtResource("3_otssx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.46373, 0.103638, 0)

[node name="Timer" type="Timer" parent="."]

[node name="Time" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -38.5
offset_top = 12.0
offset_right = 38.5
offset_bottom = 35.0
grow_horizontal = 2
text = "Time left: "

[node name="Enemyhandler" type="Node3D" parent="."]

[node name="spawner" parent="." instance=ExtResource("5_y3a2u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.7318, 0, -4.78992)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="panel" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -207.5
offset_top = -163.0
offset_right = 207.5
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/panel"]
layout_mode = 2
offset_left = 159.5
offset_top = 40.0
offset_right = 255.5
offset_bottom = 56.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_e5v8s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="restart" type="Button" parent="CanvasLayer/panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_e5v8s")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xepbd")
theme_override_styles/hover = SubResource("StyleBoxFlat_uffdx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ljl40")
theme_override_styles/normal = SubResource("StyleBoxFlat_sgx1i")
text = "Again
"

[node name="nextlevel" type="Button" parent="CanvasLayer/panel/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_e5v8s")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xepbd")
theme_override_styles/hover = SubResource("StyleBoxFlat_uffdx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ljl40")
theme_override_styles/normal = SubResource("StyleBoxFlat_sgx1i")
text = "Next level"

[node name="gameselect" type="Button" parent="CanvasLayer/panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_e5v8s")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xepbd")
theme_override_styles/hover = SubResource("StyleBoxFlat_uffdx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ljl40")
theme_override_styles/normal = SubResource("StyleBoxFlat_sgx1i")
text = "Game select"

[connection signal="player_died" from="player" to="." method="_on_player_player_died"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/panel/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/panel/VBoxContainer/nextlevel" to="." method="_on_nextlevel_pressed"]
[connection signal="pressed" from="CanvasLayer/panel/VBoxContainer/gameselect" to="." method="_on_gameselect_pressed"]
